--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
 <body>
     <header id="main_header">
         <nav class="header">
-            <a href="#">
-                <img src="./image/logo.jpg" alt="logo">
+            <a href="#" class="navbar_brand">
+                <svg width="102" height="22" viewbox="0 0 102 22">
+                    <g fill-rule="evenodd">
+                        <path fill="#000" class="text"
+                            d="M 102 5.946 h -3.222 v 4.28 H 91.8 v -4.28 h -3.221 v 4.28 h -5.637 a 1.878 1.878 0 0 1 -1.879 -1.872 V 5.946 h -3.221 v 2.408 a 1.878 1.878 0 0 1 -1.879 1.873 a 1.878 1.878 0 0 1 -1.879 -1.873 V 5.946 h -3.221 v 2.408 a 1.878 1.878 0 0 1 -1.879 1.873 h -1.879 V 5.946 h -3.22 v 4.28 h -17.18 v 3.212 h 3.758 v 0.535 c 0 2.656 -2.167 4.816 -4.831 4.816 c -2.664 0 -4.832 -2.16 -4.832 -4.816 v -3.746 H 37.58 v 3.746 c 0 4.426 3.613 8.027 8.053 8.027 c 4.44 0 8.052 -3.6 8.052 -8.027 v -0.535 H 68.985 a 5.09 5.09 0 0 0 3.489 -1.381 a 5.09 5.09 0 0 0 3.49 1.38 a 5.09 5.09 0 0 0 3.489 -1.38 a 5.089 5.089 0 0 0 3.489 1.38 H 102 V 5.947 Z">
+                        </path>
+                        <path fill="#000" class="text"
+                            d="M 84.702 19.297 h 3.854 V 22 h 3.304 v -5.946 h -7.158 Z M 102 0 h -6.561 v 2.973 H 102 Z">
+                        </path>
+                        <path fill="#FF5B35" class="line"
+                            d="M 26.842 11.297 H 10.737 V 5.946 h 16.105 Z M 26.842 22 H 0 v -5.351 h 26.842 Z">
+                        </path>
+                    </g>
+                </svg>
             </a>
             <div class="nav_link_container">
                 <ul class="nav_links">
