--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
     <header id="main_header">
         <nav class="header">
             <a href="#" class="navbar_brand">
@@ -48,12 +49,77 @@
             </div>
         </nav>
     </header>
-    <main>
+
+    <main class="main_content">
 
     </main>
-    <footer>
 
+    <footer id="main_footer" class="footer">
+        <div class="footer_container">
+            <div class="brand_col">
+                <a href="#">
+                    <img src="./image/tapsi-logo-white.svg" alt="logo" class="footer_logo">
+                </a>
+                <h3>اپلیکیشن درخواست خودرو و پیک</h3>
+                <p>تمام حقوق مادی و معنوی این وبسایت متعلق به تپسی است.</p>
+            </div>
+            <div class="footer_col">
+                <h6>تپسی</h6>
+                <a class="link" href="#">وبلاگ تپسی</a>
+                <a class="link" href="#">فرصت شغلی</a>
+                <a class="link" href="#">تماس با ما</a>
+                <a class="link" href="#">لوگو و هویت سازمانی</a>
+                <a class="link" href="#">معرفی راننده به تپسی</a>
+            </div>
+            <div class="footer_col">
+                <h6>مسافران</h6>
+                <a class="link" href="#">دانلود اپ مسافر</a>
+                <a class="link" href="#">نسخه وب تپسی</a>
+                <a class="link" href="#">پرسش‌های متداول مسافران</a>
+                <a class="link" href="#">شرایط و قوانین مسافران</a>
+                <a class="link" href="#">باشگاه مشتریان</a>
+            </div>
+            <div class="footer_col">
+                <h6>رانندگان</h6>
+                <a class="link" href="#">دانلود اپ سفیر</a>
+                <a class="link" href="#">ثبت نام راننده تاکسی اینترنتی</a>
+                <a class="link" href="#">پرسش‌های متداول سفیران</a>
+                <a class="link" href="#">شرایط و قوانین سفیران</a>
+                <a class="link" href="#">باشگاه سفیران</a>
+            </div>
+            <div class="footer_col">
+                <h6>کسب و کارها</h6>
+                <a class="link" href="#">پنل سازمانی تپسی</a>
+                <a class="link" href="#">خرید کد اعتبار و تخفیف</a>
+                <a class="link" href="#">دریافت API</a>
+            </div>
+            <div class="trust_col">
+                <div class="trust_logo">
+                    <img src="./image/etehadiye.png" alt="etehadiye">
+                </div>
+                <div class="trust_logo">
+                    <img src="./image/logoy-top.png" alt="samandehi">
+                </div>
+            </div>
+            <div class="social_container">
+<h3>تپسی در شبکه‌های اجتماعی</h3>
+<div class="social_links">
+    <a href="#">
+        <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a href="#">
+        <i class="fa-brands fa-telegram"></i>
+    </a>
+    <a href="#">
+        <i class="fas fa-brands fa-twitter"></i>
+    </a>
+</div>
+
+            </div>
+
+        </div>
     </footer>
+
 </body>
 
 </html>
