--- a/index.html
+++ b/index.html
@@ -102,18 +102,24 @@
                 </div>
             </div>
             <div class="social_container">
-<h3>تپسی در شبکه‌های اجتماعی</h3>
-<div class="social_links">
-    <a href="#">
-        <i class="fa-brands fa-instagram"></i>
-    </a>
-    <a href="#">
-        <i class="fa-brands fa-telegram"></i>
-    </a>
-    <a href="#">
-        <i class="fas fa-brands fa-twitter"></i>
-    </a>
-</div>
+                <h3>تپسی در شبکه‌های اجتماعی</h3>
+                <div class="social_links">
+                    <a href="#">
+                        <img src="./image/facebook.svg" alt="facebook_icon">
+                    </a>
+                    <a href="#">
+                        <img src="./image/instagram.svg" alt="instagram_icon">
+                    </a>
+                    <a href="#">
+                        <img src="./image/twitter.svg" alt="twitter_icon">
+                    </a>
+                    <a href="#">
+                        <img src="./image/linkedin.svg" alt="linkedin_icon">
+                    </a>
+                    <a href="#">
+                        <img src="./image/telegram.svg" alt="telegram_icon">
+                    </a>
+                </div>
 
             </div>
 
