main content section 1 final

--- a/index.html
+++ b/index.html
@@ -49,8 +49,49 @@
             </div>
         </nav>
     </header>
-
-    <main class="main_content">
+    <div id="notification_banner">
+        <p>تپسی‌پک، ارزان‌ترین پیک تهران! با ثبت کد تخفیف tpckg روی دو سفارش اول خود، 100% تخفیف بگیرید.</p>
+        <a class="tap30_pack" href="#">ورود به تپسی پک</a>
+    </div>
+    <main id="main_content">
+        <section id="section1">
+            <div class="tap30_banner">
+                <img src="./image/بنر تپسی.jpg" alt="tap30_banner">
+            </div>
+            <div class="map">
+                <img src="./image/mockup-phone.png" alt="map">
+            </div>
+            <div class="container_mainbtn">
+                <h1 class="title">تپسی</h1>
+                <h2 class="sub_title">اپلیکیشن درخواست خودرو و پیک</h2>
+                <div class="intro_btn">
+                    <div class="intro_btn_passanger">                      
+                        <a class="download_btn" href="#">
+                            <i class="fa fa-download"></i>
+                            <p>دانلود اپلیکیشن مسافران</p>                       
+                        </a>
+                    </div>
+                    <div class="intro_btn_passanger">                      
+                        <a class="download_btn" href="#">
+                            <i class="fa fa-fax"></i>
+                            <p>وب اپلیکیشن مسافران</p>                       
+                        </a>
+                    </div>
+                    <div class="driver_btn">                      
+                        <a class="download_btn" href="#">
+                            <i class="fa fa-download"></i>
+                            <p>دانلود اپلیکیشن رانندگان</p>                       
+                        </a>
+                    </div>
+                    <div class="driver_btn">                      
+                        <a class="download_btn" href="#">
+                            <i class="fa fa-car"></i>
+                            <p>ثبت نام راننده</p>                       
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
@@ -120,9 +161,7 @@
                         <img src="./image/telegram.svg" alt="telegram_icon">
                     </a>
                 </div>
-
             </div>
-
         </div>
     </footer>
 
