main content section2

--- a/index.html
+++ b/index.html
@@ -65,34 +65,72 @@
                 <h1 class="title">تپسی</h1>
                 <h2 class="sub_title">اپلیکیشن درخواست خودرو و پیک</h2>
                 <div class="intro_btn">
-                    <div class="intro_btn_passanger">                      
+                    <div class="intro_btn_passanger">
                         <a class="download_btn" href="#">
                             <i class="fa fa-download"></i>
-                            <p>دانلود اپلیکیشن مسافران</p>                       
+                            <p>دانلود اپلیکیشن مسافران</p>
                         </a>
                     </div>
-                    <div class="intro_btn_passanger">                      
+                    <div class="intro_btn_passanger">
                         <a class="download_btn" href="#">
                             <i class="fa fa-fax"></i>
-                            <p>وب اپلیکیشن مسافران</p>                       
+                            <p>وب اپلیکیشن مسافران</p>
                         </a>
                     </div>
-                    <div class="driver_btn">                      
+                    <div class="driver_btn">
                         <a class="download_btn" href="#">
                             <i class="fa fa-download"></i>
-                            <p>دانلود اپلیکیشن رانندگان</p>                       
+                            <p>دانلود اپلیکیشن رانندگان</p>
                         </a>
                     </div>
-                    <div class="driver_btn">                      
+                    <div class="driver_btn">
                         <a class="download_btn" href="#">
                             <i class="fa fa-car"></i>
-                            <p>ثبت نام راننده</p>                       
+                            <p>ثبت نام راننده</p>
                         </a>
                     </div>
                 </div>
             </div>
         </section>
-
+        <section id="section2">
+            <div class="services">
+                <h2 class="title">سرویس‌های تپسی</h2>
+                <div class="icon_container">
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-classic.png" alt="tap30_clasic">
+                        <p>تپسی کلاسیک</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-tel.png" alt="tap30_clasic">
+                        <p>تپسی تلفنی</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-line.png" alt="tap30_clasic">
+                        <p>تپسی لاین</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-motopeyk.png" alt="tap30_clasic">
+                        <p>موتوپیک</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-autopeyk.png" alt="tap30_clasic">
+                        <p>اتوپیک</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-plus.png" alt="tap30_clasic">
+                        <p>تپسی پلاس</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-taxi.png" alt="tap30_clasic">
+                        <p>تاکسی</p>
+                    </a>
+                    <a class="main_icon" href="#">
+                        <img src="./image/cc-hamyar.png" alt="tap30_clasic">
+                        <p>همیار</p>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="main_footer" class="footer">
