--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 </head>
 
 <body>
-
     <header id="main_header">
-        <nav class="header">
+        <nav class="nav_header">
             <a href="#" class="navbar_brand">
                 <svg width="102" height="22" viewbox="0 0 102 22">
                     <g fill-rule="evenodd">
@@ -34,7 +33,7 @@
                     </g>
                 </svg>
             </a>
-            <div class="nav_link_container">
+            <div class="link_container">
                 <ul class="nav_links">
                     <li><a href="#">ویدیوها</a></li>
                     <li><a href="#">پشتیبانی</a></li>
@@ -43,96 +42,98 @@
                     <li><a href="#">فرصت‌های شغلی</a></li>
                     <li><a href="#">وبلاگ</a></li>
                 </ul>
-                <div class="join_tap30">
-                    <a href="#">دانلود تپسی</a>
-                </div>
+                <a class="btn_header" href="#">دانلود تپسی</a>
             </div>
         </nav>
     </header>
+
     <div id="notification_banner">
         <p>تپسی‌پک، ارزان‌ترین پیک تهران! با ثبت کد تخفیف tpckg روی دو سفارش اول خود، 100% تخفیف بگیرید.</p>
-        <a class="tap30_pack" href="#">ورود به تپسی پک</a>
+        <a class="btn_header" href="#">ورود به تپسی پک</a>
     </div>
-    <main id="main_content">
+
+    <main id="main_section">
         <section id="section1">
-            <div class="tap30_banner">
-                <img src="./image/بنر تپسی.jpg" alt="tap30_banner">
-            </div>
-            <div class="map">
-                <img src="./image/mockup-phone.png" alt="map">
-            </div>
-            <div class="container_mainbtn">
-                <h1 class="title">تپسی</h1>
-                <h2 class="sub_title">اپلیکیشن درخواست خودرو و پیک</h2>
-                <div class="intro_btn">
-                    <div class="intro_btn_passanger">
-                        <a class="download_btn" href="#">
-                            <i class="fa fa-download"></i>
-                            <p>دانلود اپلیکیشن مسافران</p>
-                        </a>
-                    </div>
-                    <div class="intro_btn_passanger">
-                        <a class="download_btn" href="#">
-                            <i class="fa fa-fax"></i>
-                            <p>وب اپلیکیشن مسافران</p>
-                        </a>
-                    </div>
-                    <div class="driver_btn">
-                        <a class="download_btn" href="#">
-                            <i class="fa fa-download"></i>
-                            <p>دانلود اپلیکیشن رانندگان</p>
-                        </a>
-                    </div>
-                    <div class="driver_btn">
-                        <a class="download_btn" href="#">
-                            <i class="fa fa-car"></i>
-                            <p>ثبت نام راننده</p>
-                        </a>
+            <div class="container_sec1">
+                <div class="content_container">
+                    <h1 class="title">تپسی</h1>
+                    <h2 class="sub_title">اپلیکیشن درخواست خودرو و پیک</h2>
+                    <div class="intro_btn">
+                        <div class="intro_btn_passanger">
+                            <a class="download_btn" href="#">
+                                <i class="fa fa-download"></i>
+                                <p>دانلود اپلیکیشن مسافران</p>
+                            </a>
+                        </div>
+                        <div class="intro_btn_passanger">
+                            <a class="download_btn" href="#">
+                                <i class="fa fa-fax"></i>
+                                <p>وب اپلیکیشن مسافران</p>
+                            </a>
+                        </div>
+                        <div class="driver_btn">
+                            <a class="download_btn" href="#">
+                                <i class="fa fa-download"></i>
+                                <p>دانلود اپلیکیشن رانندگان</p>
+                            </a>
+                        </div>
+                        <div class="driver_btn">
+                            <a class="download_btn" href="#">
+                                <i class="fa fa-car"></i>
+                                <p>ثبت نام راننده</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
+                <img class="banner_phone" src="./image/mockup-phone.png" alt="mobile_map">
             </div>
         </section>
-        <section id="section2">
-            <div class="services">
+
+        <section id="section_services">
+            <div class="container_sevices">
                 <h2 class="title">سرویس‌های تپسی</h2>
-                <div class="icon_container">
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-classic.png" alt="tap30_clasic">
-                        <p>تپسی کلاسیک</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-tel.png" alt="tap30_clasic">
-                        <p>تپسی تلفنی</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-line.png" alt="tap30_clasic">
-                        <p>تپسی لاین</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-motopeyk.png" alt="tap30_clasic">
-                        <p>موتوپیک</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-autopeyk.png" alt="tap30_clasic">
-                        <p>اتوپیک</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-plus.png" alt="tap30_clasic">
-                        <p>تپسی پلاس</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-taxi.png" alt="tap30_clasic">
-                        <p>تاکسی</p>
-                    </a>
-                    <a class="main_icon" href="#">
-                        <img src="./image/cc-hamyar.png" alt="tap30_clasic">
-                        <p>همیار</p>
-                    </a>
-                </div>
+                <nav>
+                    <div class="icon_container">
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-classic.png" alt="tap30_clasic">
+                            <p>تپسی کلاسیک</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-tel.png" alt="tap30_clasic">
+                            <p>تپسی تلفنی</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-line.png" alt="tap30_clasic">
+                            <p>تپسی لاین</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-motopeyk.png" alt="tap30_clasic">
+                            <p>موتوپیک</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-autopeyk.png" alt="tap30_clasic">
+                            <p>اتوپیک</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-plus.png" alt="tap30_clasic">
+                            <p>تپسی پلاس</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-taxi.png" alt="tap30_clasic">
+                            <p>تاکسی</p>
+                        </a>
+                        <a class="main_icon" href="#">
+                            <img src="./image/cc-hamyar.png" alt="tap30_clasic">
+                            <p>همیار</p>
+                        </a>
+                    </div>
+                </nav>
             </div>
         </section>
+
     </main>
 
+    <!--
     <footer id="main_footer" class="footer">
         <div class="footer_container">
             <div class="brand_col">
@@ -201,7 +202,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 </body>
 
