fixed services part

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <main id="main_section">
         <section id="section1">
             <div class="container_sec1">
+                <img class="bgbanner" src="./image/بنر تپسی.jpg" alt="بنر">
                 <div class="content_container">
                     <h1 class="title">تپسی</h1>
                     <h2 class="sub_title">اپلیکیشن درخواست خودرو و پیک</h2>
@@ -94,40 +95,164 @@
                 <h2 class="title">سرویس‌های تپسی</h2>
                 <nav>
                     <div class="icon_container">
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-classic.png" alt="tap30_clasic">
-                            <p>تپسی کلاسیک</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-tel.png" alt="tap30_clasic">
-                            <p>تپسی تلفنی</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-line.png" alt="tap30_clasic">
-                            <p>تپسی لاین</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-motopeyk.png" alt="tap30_clasic">
-                            <p>موتوپیک</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-autopeyk.png" alt="tap30_clasic">
-                            <p>اتوپیک</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-plus.png" alt="tap30_clasic">
-                            <p>تپسی پلاس</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-taxi.png" alt="tap30_clasic">
-                            <p>تاکسی</p>
-                        </a>
-                        <a class="main_icon" href="#">
-                            <img src="./image/cc-hamyar.png" alt="tap30_clasic">
-                            <p>همیار</p>
-                        </a>
+                        <div>
+                            <a class="main_icon" href="#clasic">
+                                <img src="./image/cc-classic.png" alt="tap30_clasic">
+                                <p>تپسی کلاسیک</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#tell">
+                                <img src="./image/cc-tel.png" alt="tap30_clasic">
+                                <p>تپسی تلفنی</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#line">
+                                <img src="./image/cc-line.png" alt="tap30_clasic">
+                                <p>تپسی لاین</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#moto">
+                                <img src="./image/cc-motopeyk.png" alt="tap30_clasic">
+                                <p>موتوپیک</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#oto">
+                                <img src="./image/cc-autopeyk.png" alt="tap30_clasic">
+                                <p>اتوپیک</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#plus">
+                                <img src="./image/cc-plus.png" alt="tap30_clasic">
+                                <p>تپسی پلاس</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#taxi">
+                                <img src="./image/cc-taxi.png" alt="tap30_clasic">
+                                <p>تاکسی</p>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="main_icon" href="#hamyar">
+                                <img src="./image/cc-hamyar.png" alt="tap30_clasic">
+                                <p>همیار</p>
+                            </a>
+                        </div>
                     </div>
                 </nav>
+                <div class="description_part" id="clasic">
+                    <div class="content_container">
+                        <h3 class="master_subtitle"> تپسی کلاسیک</h3>
+                        <p class="description">
+                            با سرویس کلاسیک تپسی، یک خودروی اختصاصی برای رسیدن به مقصدتان دارید. تپسی کلاسیک، راهی سریع
+                            و
+                            آسان برای سفرهای درون‌شهری در هر ساعتی از روز است. در این سرویس، شما امکان تعیین دو یا چند
+                            مقصد
+                            و همچنین توقف در مسیر را دارید.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/تپسی کلاسیک.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="tell">
+                    <div class="content_container">
+                        <h3 class="master_subtitle"> تپسی تلفنی</h3>
+                        <p class="description">
+                            سرویس تپسی تلفنی یا ۱۶۳۰، این امکان را به شما می‌دهد که بدون نیاز به اینترنت و اپلیکیشن،
+                            درخواست خودرو بدهید. این سرویس تاکسی تلفنی مناسب زمانی است که به هر دلیلی دسترسی به اینترنت
+                            یا اپلیکیشن ندارید. همچنین سرویس تلفنی تپسی، راه حلی مناسب برای افرادی است که کار کردن با
+                            اپلیکیشن‌های موبایلی برایشان راحت نیست.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/تپسی تلفنی.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="line">
+                    <div class="content_container">
+                        <h3 class="master_subtitle"> تپسی لاین</h3>
+                        <p class="description">
+                            تپسی لاین سرویسی است که امکان سفر اشتراکی را برایتان فراهم می‌کند. در این سرویس شما با مسافر
+                            دیگری که هم‌مسیرتان است، هم‌سفر خواهید بود و هزینه سفرتان تقسیم می‌شود.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/تپسی لاین.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+
+                <div class="description_part" id="moto">
+                    <div class="content_container">
+                        <h3 class="master_subtitle">موتوپیک </h3>
+                        <p class="description">
+                            با استفاده از سرویس موتوپیک، بسته‌ها و مرسولاتتان با پیک موتور به مقصد ارسال می‌شوند. این
+                            سرویس مناسب زمانی است که می‌خواهید مرسوله سریع‌تر به مقصد برسد. در این سرویس، شما می‌توانید
+                            مسیر رسیدن مرسوله‌تان به مقصد را به صورت لحظه‌ای روی نقشه دنبال کنید.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/موتوپیک.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="oto">
+                    <div class="content_container">
+                        <h3 class="master_subtitle">اتوپیک</h3>
+                        <p class="description">
+                            اتوپیک سرویسی برای ارسال بسته‌های شما با خودرو است. این سرویس، برای زمانی مناسب است که
+                            بسته‌های شما، با موتور قابل ارسال نیستند و یا در حین جابجایی، نیاز به مراقبت بیشتری دارند.
+                            در این سرویس نیز امکان رصد لحظه ‌به لحظه موقعیت مکانی مرسوله تا زمان رسیدن به مقصد فراهم
+                            است.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/اتوپیک.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="plus">
+                    <div class="content_container">
+                        <h3 class="master_subtitle">تپسی پلاس</h3>
+                        <p class="description">
+                            در سرویس پلاس تاکسی اینترنتی تپسی، خودرویی با مدل بالاتر و عمر کمتر، به دنبال شما خواهد آمد.
+                            همچنین، رانندگان این سرویس بالاترین امتیاز را از مسافران دریافت کرده‌اند. در این سرویس که در
+                            حال حاضر در تهران فعال است، امکان تعیین چند مقصد یا توقف در حین سفر، وجود دارد.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/تپسی پلاس.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="taxi">
+                    <div class="content_container">
+                        <h3 class="master_subtitle">تپسی تاکسی</h3>
+                        <p class="description">
+                            در سرویس تاکسی تپسی، تاکسی‌های زرد یا سبز شما را به مقصدتان می‌رسانند. این سرویس در حال حاضر
+                            در تهران فعال است و چنانچه به دلایلی مانند ورود به محدوده طرح ترافیک یا طرح آلودگی هوا،
+                            ترجیح بدهید از تاکسی برای رفت‌وآمدتان استفاده کنید، گزینه مناسبی خواهد بود.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/تپسی تاکسی.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
+                <div class="description_part" id="hamyar">
+                    <div class="content_container">
+                        <h3 class="master_subtitle">همیار</h3>
+                        <p class="description">
+                            سرویس همیار تپسی، به جای شما خرید می‌کند. کافیست فروشگاه مورد نظر خود را به عنوان مبدا مشخص
+                            کرده و لیست خریدتان را داخل اپ وارد کنید. این خرید‌ها می‌تواند از سوپرمارکت یا داروخانه مورد
+                            نظر شما باشند.
+                        </p>
+                    </div>
+                    <div class="image_container">
+                        <img src="./image/همیار.jpg" alt="tapsiclassic">
+                    </div>
+                </div>
             </div>
         </section>
 
